[gd_scene load_steps=7 format=3 uid="uid://bu0nqgqmc2e1v"]

[ext_resource type="Script" uid="uid://cnqb58xx7k1kf" path="res://scripts/main_menu.gd" id="1_fn0jj"]
[ext_resource type="Texture2D" uid="uid://b18bd1eu5s6gc" path="res://assets/ui/MainMenuImage.png" id="2_5clpt"]
[ext_resource type="Theme" uid="uid://cci3vxgim82w8" path="res://menu_theme.tres" id="3_sonvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsom3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ebjn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob46e"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_fn0jj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -72.0
offset_right = 328.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.881559, 0.822056)
texture = ExtResource("2_5clpt")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -192.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.83271, 1.69897)
theme = ExtResource("3_sonvr")
theme_override_constants/margin_right = 220
theme_override_constants/margin_bottom = 150

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_fsom3")
action_mode = 0
text = "NOVO JOGO"

[node name="Load" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_0ebjn")
text = "CONTINUAR"

[node name="Options" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_0ebjn")
text = "OPCOES"

[node name="Quit" type="Button" parent="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ob46e")
text = "SAIR"

[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
